@@ -1,3 +1,9 @@
+2011-07-08 13:06  paddockd
+
+	* [r272] ChangeLog, src/squeezeslave/squeezeslave.c: For -DEMPEG
+	  always enable renice and -N/--renice are ignored.
+	  Increased version to 272.
+
 2011-07-08 12:52  paddockd
 
 	* [r271] ChangeLog, src/slimproto/slimproto.c,
